--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="#solucoes">Nossas Soluções</a></li>
                     <li><a href="#sustentabilidade">Sustentabilidade</a></li>
                     <li><a href="#casos-sucesso">Casos de Sucesso</a></li>                    
-                    <li><a href="#contato">Contato</a></li>
+                    <li><a href="./contato.html">Contato</a></li>
                     <li><a href="#orcamento" class="btn-cta-nav">Orçamento Gratuito</a></li>
                 </ul>
             </nav>
@@ -210,7 +210,7 @@
         <div class="container">
             <h2 class="animate-on-scroll">Pronto para Abraçar a Energia do Futuro?</h2>
             <p class="animate-on-scroll">Junte-se a nós na construção de um mundo mais verde e econômico.</p>
-            <a href="#contato" class="btn-primary animate-on-scroll">Fale Conosco Agora!</a>
+            <a href="./contato.html" class="btn-primary animate-on-scroll">Fale Conosco Agora!</a>
         </div>
     </section>
 
